# FiReS

./: .gitexternals  .gitignore  .gitlab-ci.yml  .jambs_configs  .travis.yml  CMakeLists.txt  Changelog.md  README.md  firesConfig.cmake.in  firesConfigVersion.cmake.in
CMake/: CPackConfig.cmake  Config.cmake.in  Doxygen.cmake  ExportLibrary.cmake  FindPackages.cmake  InstallLibrary.cmake  StandardConfig.cmake
cmake/: Doxyfile.in  project-config.cmake.in  unified_header.h.in  version.h.in
doc/: Doxyfile
examples/: CMakeLists.txt  aggregate.cpp  caster.cpp  dependencies.cpp  example1.cpp  example2.cpp  features.cpp  filter.cpp  floatFeatures.cpp  floatFeaturesNormalization.cpp  largeNumberOfObjects.cpp  objectFeatures.cpp  observer.cpp  properties.cpp  scalarFeatures.cpp  searchLargeNumberOfObjects.cpp  searchScalar.cpp  searchVector.cpp  serialize.cpp  sort.cpp  tasks.cpp  vectorFeatures.cpp
fires/: Aggregate.h  Aggregator.h  Averager.h  CMakeLists.txt  Comparer.cpp  Comparer.h  Definitions.h  DependenciesManager.cpp  DependenciesManager.h  Engine.cpp  Engine.h  Feature.cpp  Feature.h  FeatureCaster.h  FeatureFloatPtr.cpp  FeatureFloatPtr.h  FeatureFloatPtrComparer.cpp  FeatureFloatPtrComparer.h  FeatureFloatVectorComparer.cpp  FeaturePtr.cpp  FeaturePtr.h  FeaturePtrToFloat.cpp  FeaturePtrToFloat.h  FeaturePtrToFloatComparer.cpp  FeaturePtrToFloatComparer.h  FeaturePtrToScalar.h  FeaturePtrToScalarComparer.h  FeaturePtrToVector.h  FeaturePtrToVectorComparer.h  FeaturePtrToVectorOfPtrs.h  FeaturePtrToVectorOfPtrsComparer.h  FeatureScalar.h  FeatureScalarComparer.h  FeatureVectorComparer.h  FeatureVectorOfPointersPtrComparer.h  FeatureVectorPtr.h  FeatureVectorPtrComparer.h  Filter.h  FiresConfig.h  Log.cpp  (+27 more)
fires/Object/: Object.cpp  Object.h  Objects.cpp  Objects.h
fires/Property/: Aggregator.h  Averager.h  Comparer.cpp  Comparer.h  Normalizer.h  Property.cpp  Property.h  PropertyCaster.h
fires/Tasks/: Aggregate.h  Engine.cpp  Engine.h  Filter.cpp  Filter.h  Search.cpp  Search.h  SearchConfig.cpp  SearchConfig.h  Slice.cpp  Slice.h  Sort.cpp  Sort.h  Task.h
test/: ObjectTest.h  runTests.cpp
tests/: Averager.cpp  CMakeLists.txt  Comparer.cpp  Dependencies.cpp  Feature.cpp  FeatureCaster.cpp  FeaturePtr.cpp  FeaturePtrToScalar.cpp  FeaturePtrToScalarComparer.cpp  FeatureScalar.cpp  FeatureScalarComparer.cpp  Filter.cpp  Object.cpp  ObjectTest.h  Property.cpp  PropertyCaster.cpp  PropertyGIDManager.cpp  QueryFeatures.cpp  firesTests.h
